crates/wdl-grammar/tests/parsing/top-recovery/source.errors
error: expected import statement, struct definition, enum definition, task definition, or workflow definition, but found `Int` keyword
  ┌─ tests/parsing/top-recovery/source.wdl:9:1
  │
9 │ Int i = 0
  │ ^^^ unexpected `Int` keyword

