crates/wdl-grammar/tests/parsing/top-recovery/source.wdl
# This is a test of top-level item recovery.

version 1.1

struct A {
    String x
}

Int i = 0

struct B {
    Int y
}
